# pynei

./: .gitignore  README.md  activate_node  new_api_proposal.py  pyproject.toml  run_tests.py  todo.txt
container/: Containerfile
docs/devel/: create_pyodide_testing_env.md  install_node.md  run_tests.md
src/pynei/: __init__.py  config.py  dists.py  dists_old.py  diversity.py  genotypes.py  gt_counts.py  io_vars.py  io_vcf.py  io_vcf_polars_parser_attempt.py  ld.py  ld_calc.py  pca.py  pca_old.py  pipeline.py  sample_stats.py  stats.py  utils_pop.py  utils_stats.py  var_filters.py  variants.py
test/: datasets.py  io_array_tests.py  io_vcf_tests.py  test_dists.py  test_dists_old.py  test_diversity.py  test_filters.py  test_genotypes.py  test_gt_counts.py  test_io_vars.py  test_ld.py  test_pca.py  test_pca_old.py  test_sample_stats.py  test_stats.py  test_vars.py  test_vcf.py  var_generator.py  var_generators.py
