[project]
name = "pyNei"
version = "0.1.0"
description = "Population genetics with python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.5.0",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "pyarrow>=18.0.0",
    "scipy>=1.14.1",
]

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
]
